--- a/Dialog_Settings.ui
+++ b/Dialog_Settings.ui
@@ -31,6 +31,9 @@
      </item>
      <item row="0" column="1">
       <widget class="QSpinBox" name="spinBox_batteryw">
+       <property name="suffix">
+        <string>%</string>
+       </property>
        <property name="maximum">
         <number>100</number>
        </property>
@@ -42,7 +45,33 @@
      <item row="1" column="0">
       <widget class="QCheckBox" name="checkBox">
        <property name="text">
-        <string>Autostart</string>
+        <string>&amp;Autostart</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>&amp;Update Time:</string>
+       </property>
+       <property name="buddy">
+        <cstring>spinBox</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QSpinBox" name="spinBox">
+       <property name="suffix">
+        <string> sec</string>
+       </property>
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>60</number>
+       </property>
+       <property name="singleStep">
+        <number>1</number>
        </property>
       </widget>
      </item>
