--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -40,6 +40,9 @@
     </item>
     <item row="1" column="0">
      <widget class="QFrame" name="">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgba(253, 252, 255, 180);</string>
+      </property>
       <layout class="QFormLayout" name="formLayout">
        <property name="fieldGrowthPolicy">
         <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
