--- a/resource.qrc
+++ b/resource.qrc
@@ -3,5 +3,6 @@
     <file>icons8-spade-64.png</file>
     <file>icons8-empty-battery-64.png</file>
     <file>icons8-battery-level-64.png</file>
+    <file>icon-official.png</file>
   </qresource>
 </RCC>
