--- a/Dialog_Settings.ui
+++ b/Dialog_Settings.ui
@@ -43,7 +43,7 @@
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QCheckBox" name="checkBox">
+      <widget class="QCheckBox" name="checkBox_autostart">
        <property name="text">
         <string>&amp;Autostart</string>
        </property>
@@ -55,12 +55,12 @@
         <string>&amp;Update Time:</string>
        </property>
        <property name="buddy">
-        <cstring>spinBox</cstring>
+        <cstring>spinBox_update</cstring>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QSpinBox" name="spinBox">
+      <widget class="QSpinBox" name="spinBox_update">
        <property name="suffix">
         <string> sec</string>
        </property>
